custom scss classes

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
 // Set your brand colors
-$purple: #8a4d76;
+$white: #f2f2f2;
 $black: #0d0d0d;
 $brown: #8c4a23;
 $beige: #bf8654;
@@ -20,10 +20,11 @@ $widescreen-enabled: false;
 $fullhd-enabled: false;
 
 // Update some of Bulma's component variables
-$body-background-color: $beige;
+$body-background-color: $white;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
+$navbar-item-color: $white;
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
@@ -41,6 +42,21 @@ $input-shadow: none;
 
 // Custom Classes
 
+.App {
+  margin-top: 10px;
+  width: 98vw;
+  height: 98vh;
+}
 .font-color-secondary {
   color: $brown;
+}
+.switch-wrapper {
+  background-color: $beige;
+}
+.content {
+  line-height: 1.5em;
+}
+.menu {
+  background-color: $brown;
+  margin-top: 5px;
 }
