--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ $green: #0a2626;
 
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $black;
+$grey-dark: $green;
 $grey-light: $beige-dark;
 $primary: $green;
 $link: $beige-dark;
@@ -24,8 +24,8 @@ $body-background-color: $white;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
-$navbar-item-color: $white;
-$navbar-item-hover-color: $link;
+$menu-item-color: $white;
+$menu-item-hover-color: $green;
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
@@ -55,13 +55,14 @@ $navbar-item-hover-color: $link;
 }
 .switch-wrapper {
   background-color: $beige-light;
-  width: 87vw;
+  width: 90vw;
 }
 .content {
   line-height: 1.5em;
 }
 .menu {
   background-color: $green;
+  width: 10vw;
 }
 .title {
   color: $white;
