--- a/src/App.scss
+++ b/src/App.scss
@@ -137,13 +137,39 @@ body::-webkit-scrollbar {
 }
 .soccer-pic {
   float: right;
-  margin-top: 0.5em;
+  margin-top: 3em;
+  margin-bottom: 1em;
   margin-right: -1.5em;
   margin-left: 1em;
   max-height: 250px;
   max-width: 100px;
 }
-
+.ATO {
+  float: left;
+  margin-top: 1em;
+  margin-bottom: 1em !important;
+  margin-right: 1em;
+  margin-left: 1em !important;
+}
+.bell-tower {
+  max-height: 600px;
+  max-width: 800px;
+  margin: 1em auto !important;
+}
+.grad {
+  margin-right: 1em;
+  margin-top: -1em;
+}
+.sbts {
+  max-width: 300px;
+  float: left;
+  margin-top: 1em;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+.margin-fix {
+  margin: 1em auto !important;
+}
 .underline {
   border-bottom: 2px solid $green;
 }
