--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 $section-padding: 1.5rem 1.5rem;
-$tabs-link-active-color: $blue-light;
+$tabs-link-active-color: $blue-dark;
 $menu-item-color: $white;
 $menu-item-hover-color: $blue-dark;
 
