--- a/src/App.scss
+++ b/src/App.scss
@@ -48,24 +48,26 @@ $menu-item-hover-color: $blue-dark;
 @import "../node_modules/bulma/sass/layout/section.sass";
 @import "../node_modules/bulma/sass/grid/_all.sass";
 @import "../node_modules/bulma/sass/layout/_all.sass";
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
 
 // Custom Classes
 
 .App {
   padding-top: 5px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background: $blue-dark;
 }
 p {
   padding: 0.5em;
 }
 .menu {
-  min-height: 6vh;
-  max-height: 6vh;
-} //hack to fix "beginnings collapse"
+  height: 100vh;
+  padding-top: 25vh;
+}
+// hack to fix "beginnings collapse"
 body::-webkit-scrollbar {
   display: none;
 }
@@ -78,9 +80,6 @@ body::-webkit-scrollbar {
 .switch-wrapper {
   background-color: $blue-dark;
   min-width: 90vw;
-}
-.tabs:not(:last-child) {
-  margin-bottom: 0.5em;
 }
 .title {
   color: $white;
@@ -95,6 +94,22 @@ body::-webkit-scrollbar {
 }
 .intro-img {
   margin: auto;
+  position: relative;
+}
+.banner {
+  max-height: 1.5em !important;
+  padding: 5px;
+}
+.title-buffer {
+  min-height: 30vh;
+}
+.banner-text {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 12%;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .is-on-top {
   z-index: 1000;
@@ -102,11 +117,9 @@ body::-webkit-scrollbar {
 .relative {
   position: relative;
 }
-.banner {
-  max-height: 1.5em !important;
-  padding: 5px;
+.menu-list > li {
+  padding: 5px 0;
 }
-
 .buttons {
   background-color: $blue-dark;
   margin: 0 auto !important;
