--- a/src/App.scss
+++ b/src/App.scss
@@ -66,8 +66,11 @@ p {
 }
 .menu {
   height: 100vh;
-  padding-top: 25vh;
+  padding-top: 35vh;
   max-width: 2.7em;
+}
+.menu-list > .item {
+  margin-top: 0.5em;
 }
 // hack to fix "beginnings collapse"
 body::-webkit-scrollbar {
@@ -119,9 +122,6 @@ body::-webkit-scrollbar {
 }
 .relative {
   position: relative;
-}
-.menu-list > li {
-  padding: 5px 0;
 }
 .husband {
   margin-top: 2em;
